fixing padding on mobile forms

--- a/static/styles.css
+++ b/static/styles.css
@@ -375,6 +375,7 @@ fieldset {
 		width: 100%;
 		margin-left: 0 auto;
 		margin-right: 0 auto;
+		padding: 0%
 	}
 
 	fieldset {
